Fixed Overflow problems

--- a/style.css
+++ b/style.css
@@ -5,11 +5,9 @@
 body{
     margin: 0;
     padding: 0;
-    min-height: 100vh;
-    
 }
 
-ul,li,p,h3{
+ul,li,p,h3,h1{
     margin: 0;
     padding: 0;
     list-style-type: none;
@@ -75,18 +73,20 @@ ul,li,p,h3{
     background-color: rgba(202, 202, 202, 0.555);
     padding: 1rem;
     display: grid;
-    grid-template-columns: minmax(0,2fr) minmax(0,1fr);
-    grid-template-rows: repeat(1,minmax(0,1fr));
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr;
 }
 .main-content > .left-container{
+    min-height: 0;
     grid-column: 1/2;
     grid-row: 1/2;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: 2fr 2fr;
+    grid-template-rows: repeat(auto-fit, 1fr);
     gap: 10px;
 }
 .main-content > .right-container{
+    min-height: 0;
     grid-column: 2/3;
     grid-row: 1/2;
     display: grid;
@@ -94,6 +94,12 @@ ul,li,p,h3{
     grid-template-rows: 1fr 1fr;
     gap: 10px;
 }
+
+.left-container > h1{
+    grid-column: 1/-1;
+    grid-row: 1/2;
+}
+
 
 .announcements{
     grid-column: 1/2;
